--- a/app/src/main/res/layout/activity_championship.xml
+++ b/app/src/main/res/layout/activity_championship.xml
@@ -1,34 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".champ.championship_Activity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="237dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/championshipRecyclerView"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginBottom="424dp"
-        android:text="чемпионат"
-        android:textSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
-
-    <Button
-        android:id="@+id/back_button"
-        android:layout_width="185dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginBottom="26dp"
-        android:text="Назад"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
