--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     tools:context=".table.table_Activity">
 
+    <!-- Заголовок экрана (по желанию) -->
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="116dp"
-        android:text="таблица"
-        android:textSize="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Турнирная таблица"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:padding="8dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Шапка таблицы -->
+    <include layout="@layout/table_header" />
+
+    <!-- Список команд -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerTable"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingTop="4dp" />
+
+    <Button
+        android:id="@+id/btnAddTeam"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Добавить команду"
+        android:visibility="gone"
+        android:layout_marginVertical="8dp"/>
+</LinearLayout>
